--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,26 @@ body {
    background-size: cover;
 
 }
+.navs {
+    list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+.nav {
+    float: left;
+}
+.nav>a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+.nav a:hover{
+    background-color: #111;
+}
 
 div>h1{
     color: navy;
@@ -33,28 +53,7 @@ div>.bg{
 .forms{
     text-align: center;
 }
-#anchor{
-    background-color: slategrey;
-    height: 35px;
-}
-#anchor>a{
-    text-align: center;
-    text-align: center;
-    color: whitesmoke;
-    position: relative;
-    font-size: 15px;
-    padding: 10px 10px;
-    margin-left: 65px;
-    margin-right: 60px;
-    font-weight: 800;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-#anchor>a:hover {
-    background-color: white;
-    color: black;
-    text-decoration: none;
-    
-}
+
 div>p{
     text-align: center;
 
@@ -66,5 +65,7 @@ div>p{
 footer{
     background-color: slategrey;
     color: white;
-    height: 120px;
+    height: 70px;
+    text-align: center;
 }
+
